# practice

./: .gitignore  .gitmodules  README.md
bash/: .editorconfig  .shellcheckrc  Makefile  README.md  run_tests.sh  tap.sh
bash/.devcontainer/: Dockerfile  devcontainer.json  setup.sh
bash/concepts/: directories.sh  shell.sh
bash/tests/: test_directories.bats  test_shell.sh
c/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
c/.devcontainer/: Dockerfile  devcontainer.json
c/concepts/: CMakeLists.txt  hello.c  hello.h  short_type.c  short_type.h  single-concept.file  variables.c  variables.h
c/concepts/numbers/: char_type.h  short_type.c  short_type.h
c/scripts/: build-and-test.sh
c/tests/: CMakeLists.txt  single-concept-test.file  test_hello.cpp  test_short_type.cpp  test_variables.c
c/tests/numbers/: CMakeLists.txt  test_short_type.cpp
concepts/cpp/: char.cpp
cpp/: .clang-format  CMakeLists.txt  Makefile  README.md  gdb_init.gdb
cpp/.devcontainer/: Dockerfile  devcontainer.json
cpp/concepts/: CMakeLists.txt  char.cpp  char.hpp  char_type  char_type.cpp  char_type.hpp  int.cpp  int.hpp  int_ir.cpp  numbers.cpp
cpp/scripts/: build_and_test.sh
cpp/tests/: CMakeLists.txt  char_test.cpp  number_test.cpp  test_char.cpp  test_int.cc
css_html/: README.md  eslint.config.js  package-lock.json  package.json  playwright.config.js  server.cjs  vite.config.js  vitest.config.js
css_html/.devcontainer/: Dockerfile  devcontainer.json
css_html/concepts/: index.html  mime.html
css_html/concepts/mime/: data.json  index.html  mime.html  nginx.conf  sample.txt  script.js
css_html/playwright-report/: index.html
css_html/public/mime/: data.json  data.jsonld  script.js
css_html/test-results/: .last-run.json
css_html/tests/: dom-concepts.spec.js  dom-concepts.test.js
docker/: Makefile  README.md
docker/concepts/: BeforeFrom.Dockerfile  ImageVariant.Dockerfile
docker/concepts/basic-container/: Dockerfile  README.md  app.sh
docker/concepts/compose-app/: docker-compose.yml
docker/concepts/compose-app/db/: init.sql
docker/concepts/compose-app/web/: Dockerfile  app.py  requirements.txt
docker/concepts/multi-stage/: Dockerfile  package.json
docker/concepts/multi-stage/src/: app.js  health.js
docker/scripts/: build-and-test.sh
docker/tests/: test_ImageVariant.sh  test_beforeFrom.sh  test_concepts.sh
js_ts/: package.json  tsconfig.json
js_ts/concepts/: primitive-types.ts
js_ts/tests/: types.test.ts
make/: Makefile  README.md  test_harness.sh
make/.devcontainer/: Dockerfile  devcontainer.json
make/concepts/: hello.Makefile
make/concepts/structure/: Makefile  dep1  dep2  executable  executable.sh
make/tests/: test_structure.sh
patterns/design/: README.md
patterns/problem/: README.md
patterns/style/: README.md
psql/: Makefile  README.md  docker-compose.yml
psql/.devcontainer/: Dockerfile  devcontainer.json
psql/concepts/: hello.sql  select.sql
psql/data/: schema.sql  seed_select.sql  seed_where.sql
psql/scripts/: demo-devcontainer.sh  demo.sh  setup-database.sh  setup.sh  start-postgres.sh
psql/tests/: test_hello.sql  test_select.sql  test_where.sql
python/: README.md  pyproject.toml
python/.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
python/concepts/: analysis.py  implementation.py  notation.py
python/concepts/dynamic_programming/: dupe_lis.py  fibonacci.py  lcs.py  lis.py  longest_increasing_subsequence.py  word_break.py
python/data/: notation.txt
python/python_practice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/scripts/: build-and-test.sh
python/tests/: runtimer.py  test_fib.py  test_implementation.py  test_lcs.py  test_lis.py  test_notation.py  test_wordbreak.py
react/: .dockerignore  .prettierrc.json  Dockerfile.standalone  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
react/.devcontainer/: Dockerfile  devcontainer.json
react/concepts/: Counter.tsx  Hooks.useActionState.tsx
react/scripts/: build-and-test.sh
react/src/: App.tsx  runner.tsx
react/tests/: Counter.test.tsx  Hooks.test.tsx
risc-v/: Makefile  README.md  linker.ld  linker_sim.ld  linker_virt.ld  load.program.hex
risc-v/.devcontainer/: .env  Dockerfile  README.md  build.sh  devcontainer.json  docker-compose.yml
risc-v/concepts/: hello.s  load.s
risc-v/constraints/: thruwire.pcf
risc-v/obj_dir/: Vload.cpp  Vload.h  Vload.mk  Vload__ALL.cpp  Vload__ALL.d  Vload__Syms.cpp  Vload__Syms.h  Vload___024root.h  Vload___024root__DepSet_h2dbf5192__0.cpp  Vload___024root__DepSet_h2dbf5192__0__Slow.cpp  Vload___024root__DepSet_hb5b5c11e__0.cpp  Vload___024root__DepSet_hb5b5c11e__0__Slow.cpp  Vload___024root__Slow.cpp  Vload__pch.h  Vload__ver.d  Vload_classes.mk  load-sim  load-test  load.d  test_load_bare.d  verilated.d
risc-v/pcf/: load.pcf  thruwire.pcf
risc-v/rtl/: load.v  load_wrapper.v  thruwire.v
risc-v/scripts/: build-and-test.sh  check-usb.sh  fpga-build.sh  fpga-program.sh  test-icebreaker.sh
risc-v/sim/: load.c
risc-v/tests/: load.qemu.sh  load.sim.cpp  load_wrapper.sim.cpp  test_load_bare.cpp
scripts/: CheatSheet.md  new-tool-folder.sh
shell/: README.md
shell/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
shell/concepts/: powershell_basics.ps1  variables.sh  zsh_features.zsh
shell/scripts/: build-and-test.sh  test-shells.sh
shell/tests/: test_powershell_basics.ps1  test_variables.sh  test_zsh_features.zsh
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/.devcontainer/: Dockerfile  devcontainer.json
typescript/concepts/: types.ts
typescript/scripts/: build-concept.js  dev-concept.js  run-concept.js  test-concept.js
typescript/tests/: types.test.ts
