[project]
name = "python_practice"
version = "2025.09.10"
requires-python = ">=3.13.7"
dependencies = [
    "nltk",
    "astpretty",
]

[project.scripts]
fib = "concepts.dynamic_programming.fibonacci:main"
lis = "concepts.dynamic_programming.lis:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov",
    "ipython"
]
